fix(menu): make sure new menu align with old menu

--- a/src/newapp/layout/app-menu/app-menu.component.scss
+++ b/src/newapp/layout/app-menu/app-menu.component.scss
@@ -19,8 +19,6 @@
     cursor: pointer;
     &.active {
       color: white;
-      background-color: rgba(255, 255, 255, 0.1);
-      border-radius: 10px;
     }
     &:hover {
       color: white;
@@ -72,6 +70,9 @@
 }
 
 .mat-tree-node {
+  min-height: 45px;
+  font-size: 15px;
+
   &.active {
     color: white;
     background-color: rgba(255, 255, 255, 0.1);
